public class TagHelper
{
    public static string playerTag = "Player";
    public static string groundTag = "Ground";
    public static string tree1Tag = "Tree1";
    public static string tree2Tag = "Tree2";
    public static string enemyTag = "Enemy";
    public static string obstacleTag = "Obstacle";
    public static string healthTag = "Health";
    public static string gameplayControllerTag = "GameplayController";
    public static string healthBarHolder = "HealthBarHolder";

    public static string jumpButton = "Jump";

    public static string jumpAnimatiomParameter = "Jump";
    public static string attackAnimationParameter = "Attack";
    public static string runningAnimationParameter = "Run";
    public static string doubleJumpAnimationParameter = "DoubleJump";
    public static string jumpAttackAnimationParameter = "JumpAttack";
    public static string deathAnimationParameter = "Death";
    public static string attackTriggerParameter = "AttackTrigger";

    public static string runningAnimationName = "Run";
    public static string runningAttackAnimationName = "Attack";
    public static string jumpAnimationName = "Jump";
    public static string jumpAttackAnimationName = "JumpAttack";
    public static string fallAnimationName = "Fall";
    public static string doubleJumpAnimationName = "DoubleJump";
    public static string deathAnimationName = "Death";

    public static string gameplaySceneName = "Gameplay";
    public static string mainMenuSceneName = "MainMenu";

    public static string normalPlayer = "Slash Panda Normal";
    public static string redPlayer = "Slash Panda Red";
    public static string bluePlayer = "Slash Panda Blue";

    public static string characterData = "Character";
    public static string selectedCharacterData = "Selected Character";

    public static string highscoreData = "Highscore";

    public static string dataInitialized = "Data Initialized";

     
}
